# postgres_kernel

./: pyproject.toml
postgres_kernel/: __init__.py  install.py  kernel.py
